# Pyfinance

./: pyproject.toml  requirements.txt
data/: watchlist.yaml
db/: markets.duckdb
src/app/: alerts.py  dashboard.py
src/core/: watchlist.py
src/jobs/: build_views.py  fetch_daily.py
