[project]
name = "stock-tracker"
version = "0.1.0"
description = "Serverless stock tracker using DuckDB + Parquet"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.2.1,<2.0",
    "pyyaml>=6.0.0,<7.0",
    "pandas>=2.2.0,<3.0",
    "pyarrow>=15.0.0,<16.0",
    "yfinance>=0.2.35,<0.3",
    "streamlit>=1.32.0,<2.0",
]

[tool.pyright]
reportMissingImports = false

[tool.isort]
profile = "black"
